Allow specifying features for SOM generation types and categories for similarity in config
