# src/main/kotlin/ch/unibas/dmi/dbis/vrem/generation/model/SimGenType.kt
@@ -1,15 +1,0 @@
-package ch.unibas.dmi.dbis.vrem.generation.model
-
-enum class SimGenType(
-    val categoryName: ArrayList<String> = arrayListOf()
-) {
-
-    SEMANTIC(
-        arrayListOf("semantic")
-    ),
-
-    VISUAL(
-        arrayListOf("visual")
-    )
-
-}
